# click

./: .appveyor.yml  .azure-pipelines.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README  README.md  README.rst  azure-pipelines.yml  candidate.patch  click.py  delete_dead.py  pr_body_1.md  pyproject.toml  repro.py  repro_issue_3111.py  safe_delete.py  setup.cfg  setup.py  test.sh  tox.ini
.ci/: appveyor.yml
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: close-org-prs.yml  lock.yaml  lock.yml  nightly.yaml  pre-commit.yaml  publish.yaml  qualityrisk_bootstrap.yaml  screenshots.yaml  test-flask.yaml  tests.yaml  zizmor.yaml
click/: __init__.py  _bashcomplete.py  _compat.py  _fishcomplete.py  _optparse.py  _tempfile27.py  _tempfile36.py  _termui_impl.py  _textwrap.py  _unicodefun.py  _winconsole.py  bashcomplete.py  context.py  core.py  decorators.py  exceptions.py  formatting.py  globals.py  helpers.py  parser.py  simplelog.py  termui.py  testing.py  types.py  utils.py
docs/: Makefile  advanced.md  advanced.rst  api.md  api.rst  arguments.md  arguments.rst  bashcomplete.rst  changelog.rst  changes.md  changes.rst  click-concepts.md  click-concepts.rst  clickdoctools.py  command-line-reference.md  command-line-tutorial.md  commands-and-groups.md  commands-and-groups.rst  commands.md  commands.rst  complex.md  complex.rst  conf.py  contrib.md  contrib.rst  contributing.md  contributing.rst  design-opinions.md  doc2dash-userguide.py  docs-requirements.txt  documentation.md  documentation.rst  entry-points.md  entry-points.rst  exceptions.md  exceptions.rst  extending-click.md  faqs.md  glossary.md  glossary.rst  (+49 more)
docs/_scripts/: capture.py
docs/_templates/: sidebarintro.html  sidebarlogo.html
docs/_themes/: LICENSE
docs/_themes/click/: layout.html  theme.conf
docs/_themes/click/static/: click.css_t
examples/: README  email_example.py  time_it_demo.py
examples/aliases/: README  aliases.ini  aliases.py  pyproject.toml  setup.py
examples/bashcompletion/: README  bashcompletion.py  setup.py
examples/colors/: README  colors.py  pyproject.toml  setup.py
examples/completion/: README  completion.py  pyproject.toml  setup.py
examples/complex/: README  pyproject.toml  setup.py
examples/complex/complex/: cli.py
examples/complex/complex/commands/: cmd_default_map.py  cmd_init.py  cmd_long.py  cmd_status.py
examples/hello/: hello.py
examples/imagepipe/: .gitignore  README  imagepipe.py  pyproject.toml  setup.py
examples/inout/: README  inout.py  pyproject.toml  setup.py
examples/interactive/: README.md  index.html  interactive_demo.py  pyproject.toml  test_interactive.py  web_api.py
examples/naval/: README  naval.py  pyproject.toml  setup.py
examples/plick/: plick.py  setup.py
examples/plugins/: README.rst  setup.py
examples/plugins/BrokenPlugin/: README.rst  setup.py
examples/plugins/BrokenPlugin/printer_bold/: __init__.py  core.py
examples/plugins/PrinterStyle/: README.rst  setup.py
examples/plugins/PrinterStyle/printer_style/: __init__.py  core.py
examples/plugins/printer/: __init__.py  cli.py
examples/repo/: README  pyproject.toml  repo.py  setup.py
examples/termui/: README  pyproject.toml  setup.py  termui.py
examples/validation/: README  pyproject.toml  setup.py  validation.py
examples/xkcdpass/: dictionary  xkcdpass.py
locales/: compile.sh
locales/bg_BG/LC_MESSAGES/: click.po
locales/en_US/LC_MESSAGES/: click.po
locales/ru_RU/LC_MESSAGES/: click.po
packaging/arch/: PKGBUILD
requirements/: build.txt  dev.in  dev.txt  docs.in  docs.txt  tests.in  tests.txt  tests37.txt  typing.in  typing.txt
src/click/: __init__.py  _bashcomplete.py  _compat.py  _termui_impl.py  _textwrap.py  _unicodefun.py  _utils.py  _winconsole.py  core.py  decorators.py  enhanced.py  exceptions.py  formatting.py  globals.py  interactive.py  locales.py  markdown.py  parser.py  shell_completion.py  termui.py  testing.py  types.py  utils.py
src/click.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/click/locales/bg_BG/LC_MESSAGES/: click.mo
tests/: __init__.py  conftest.py  helpers.py  test.py  test_arguments.py  test_async_commands.py  test_bashcomplete.py  test_basic.py  test_chain.py  test_command_decorators.py  test_commands.py  test_compat.py  test_context.py  test_custom_classes.py  test_defaults.py  test_deprecations.py  test_examples_aliases.py  test_exception_unicode.py  test_exceptions.py  test_formatting.py  test_hcli_bashcomplete.py  test_hooks.py  test_imports.py  test_info_dict.py  test_interspersed_help.py  test_locales.py  test_normalization.py  test_optional_value_bug.py  test_options.py  test_parser.py  test_plugins.py  test_progressbar.py  test_progressbar_finish.py  test_shell_completion.py  test_simplelog.py  test_stream_lifecycle.py  test_termui.py  test_testing.py  test_testing_logging.py  test_types.py  (+4 more)
tests/static/: config.json
tests/termui/: test_echo_via_pager.py  test_progress_bar.py  test_prompt.py  test_style_unstyle.py
tests/test_utils/: test_KeepOpenFile.py  test_LazyFile.py  test__detect_program_name.py  test__expand_args.py  test_confirm.py  test_echo.py  test_echo_via_pager.py  test_format_filename.py  test_make_default_short_help.py  test_open_file.py  test_prompt.py  test_style.py
tests/test_utils_2/: test_echo.py  test_prompt.py
tests/typing/: typing_aliased_group.py  typing_confirmation_option.py  typing_file.py  typing_group_kw_options.py  typing_help_option.py  typing_options.py  typing_password_option.py  typing_progressbar.py  typing_prompt.py  typing_simple_example.py  typing_termui.py  typing_version_option.py
tests/utils/: test_echo.py  test_format_filename.py  test_keep_open_file.py  test_lazy_file.py  test_make_default_short_help.py  test_open_file.py  test_sentinel.py
(+2 files in other folders)
