[project]
name = "click-example-aliases"
version = "1.0.0"
description = "Click aliases example"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1",
]

[project.scripts]
aliases = "aliases:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "aliases"
