[project]
name = "click-example-repo"
version = "1.0.0"
description = "Click repo example"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1",
]

[project.scripts]
repo = "repo:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "repo"
